log a new dish feature