@@ -1,9 +1,7 @@
 import java.util.*;
 import javax.swing.*;
 import javax.swing.border.EmptyBorder;
-import javax.swing.event.DocumentListener;
 import javax.swing.table.DefaultTableModel;
-import javax.swing.table.JTableHeader;
 import java.awt.*;
 import java.awt.event.ActionListener;
 
@@ -16,7 +14,7 @@ import java.awt.event.ActionListener;
  */
 public class AdminView extends JFrame {
     private CardLayout cardLayout = new CardLayout();
-    
+
     private JPanel mainPanel = new JPanel(cardLayout);
     private JPanel mainMenuPanel;
     private JPanel manageDatabasePanel;
@@ -30,6 +28,16 @@ public class AdminView extends JFrame {
     // NEW: extra panels for managing Food Events and Origins
     private JPanel foodEventPanel;
     private JPanel originPanel;
+
+    // NEW: Log a New Dish panel
+    private JPanel logNewDishPanel;
+    private JTextField dishNameField;
+    private JTextField dishPriceField;
+    private JComboBox<String> originComboBox;
+    private JComboBox<String> eventComboBox;
+    private JComboBox<String> restaurantComboBox;
+    private JButton saveNewDishButton;
+    private JButton backFromLogDishButton;
 
     private ArrayList<JButton> mainMenuButtonList = new ArrayList<>();
     private ArrayList<JButton> manageDatabaseButtonList = new ArrayList<>();
@@ -64,7 +72,7 @@ public class AdminView extends JFrame {
     private JButton backFeedbackReportButton = new JButton("GO BACK");
     private ArrayList<JButton> feedbackReportButtonList = new ArrayList<>();
 
-    // NEW: Food Event panel components
+    // Food Event panel components
     private ArrayList<JButton> foodEventButtonList = new ArrayList<>();
     private JTable foodEventTable;
     private DefaultTableModel foodEventTableModel;
@@ -72,7 +80,7 @@ public class AdminView extends JFrame {
     private JTextArea foodEventDescriptionArea;
     private JButton backFoodEventButton = new JButton("GO BACK FOOD EVENT");
 
-    // NEW: Origin panel components
+    // Origin panel components
     private ArrayList<JButton> originButtonList = new ArrayList<>();
     private JTable originTable;
     private DefaultTableModel originTableModel;
@@ -90,6 +98,7 @@ public class AdminView extends JFrame {
         setLayout(new BorderLayout());
         setSize(850, 450);
 
+        // create all panels
         mainMenuPanel = createMainMenuPanel();
         manageDatabasePanel = createManageDatabasePanel();
         generateReportsPanel = createGenerateReportsPanel();
@@ -99,10 +108,11 @@ public class AdminView extends JFrame {
         revenueReportPanel = createRevenueReportPanel();
         feedbackReportPanel = createFeedbackReportPanel();
 
-        // NEW: create extra panels
         foodEventPanel = createFoodEventPanel();
         originPanel = createOriginPanel();
+        initLogNewDishPanel();   // NEW
 
+        // register all cards
         mainPanel.add(mainMenuPanel, "MAIN_MENU");
         mainPanel.add(manageDatabasePanel, "MANAGE_DATABASE_MENU");
         mainPanel.add(generateReportsPanel, "GENERATE_REPORTS_MENU");
@@ -111,10 +121,9 @@ public class AdminView extends JFrame {
         mainPanel.add(userReportPanel, "USER_REPORT_PANEL");
         mainPanel.add(revenueReportPanel, "REVENUE_REPORT_PANEL");
         mainPanel.add(feedbackReportPanel, "FEEDBACK_REPORT_PANEL");
-
-        // NEW: register new cards
         mainPanel.add(foodEventPanel, "FOOD_EVENT_MENU");
         mainPanel.add(originPanel, "ORIGIN_MENU");
+        mainPanel.add(logNewDishPanel, "LOG_NEW_DISH_MENU");   // NEW
 
         add(mainPanel);
 
@@ -135,7 +144,7 @@ public class AdminView extends JFrame {
 
         ArrayList<JLabel> labelList = new ArrayList<>();
         labelList.add(new JLabel("Choose an option below!"));
-        labelList.getFirst().setFont(new Font("Verdana", Font.BOLD, 20));
+        labelList.get(0).setFont(new Font("Verdana", Font.BOLD, 20));
 
         for (JLabel labels : labelList) {
             mainMenuLabelPanel.add(labels);
@@ -162,105 +171,17 @@ public class AdminView extends JFrame {
     }
 
     /**
-     * Creates a panel to display detailed feedback for a selected restaurant.
-     * @return a JPanel for the FEEDBACK_REPORT_PANEL card
-     */
-    private JPanel createFeedbackReportPanel() {
-        JPanel panel = new JPanel(new BorderLayout(10, 10));
-        panel.setBorder(new EmptyBorder(10, 10, 10, 10));
-
-        // --- Top Selection Panel ---
-        JPanel topPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
-        topPanel.add(new JLabel("Select Restaurant:"));
-        feedbackRestaurantComboBox = new JComboBox<>();
-        topPanel.add(feedbackRestaurantComboBox);
-
-        // Per your new convention: no underscores
-        fetchFeedbackButton = new JButton("Fetch Report");
-        fetchFeedbackButton.setActionCommand("Fetch Feedback Report");
-        topPanel.add(fetchFeedbackButton);
-
-        panel.add(topPanel, BorderLayout.NORTH);
-
-        // --- Center Content Panel ---
-        JPanel centerPanel = new JPanel();
-        centerPanel.setLayout(new BoxLayout(centerPanel, BoxLayout.Y_AXIS)); // Vertical layout
-
-        // Overall Rating
-        JPanel ratingPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
-        ratingPanel.setBorder(BorderFactory.createTitledBorder("Overall Rating"));
-        overallRatingLabel = new JLabel("N/A");
-        overallRatingLabel.setFont(new Font("Verdana", Font.BOLD, 18));
-        ratingPanel.add(overallRatingLabel);
-        // Make this panel align left in the BoxLayout
-        ratingPanel.setAlignmentX(Component.LEFT_ALIGNMENT);
-        centerPanel.add(ratingPanel);
-
-        // Menu Popularity Table
-        String[] menuColumnNames = {"Menu Item", "Total Times Ordered"};
-        menuPopularityTableModel = new DefaultTableModel(menuColumnNames, 0) {
-            public boolean isCellEditable(int row, int column) { return false; }
-        };
-        menuPopularityTable = new JTable(menuPopularityTableModel);
-        JScrollPane menuScrollPane = new JScrollPane(menuPopularityTable);
-        menuScrollPane.setBorder(BorderFactory.createTitledBorder("Menu Item Popularity (Ranked)"));
-        menuScrollPane.setPreferredSize(new Dimension(800, 150)); // Give it a preferred size
-        // Make this panel align left in the BoxLayout
-        menuScrollPane.setAlignmentX(Component.LEFT_ALIGNMENT);
-        centerPanel.add(menuScrollPane);
-
-        // Comments Table
-        String[] commentsColumnNames = {"User Comments"};
-        commentsTableModel = new DefaultTableModel(commentsColumnNames, 0) {
-            public boolean isCellEditable(int row, int column) { return false; }
-        };
-        commentsTable = new JTable(commentsTableModel);
-        JScrollPane commentsScrollPane = new JScrollPane(commentsTable);
-        commentsScrollPane.setBorder(BorderFactory.createTitledBorder("Feedback Comments"));
-        commentsScrollPane.setPreferredSize(new Dimension(800, 150)); // Give it a preferred size
-        // Make this panel align left in the BoxLayout
-        commentsScrollPane.setAlignmentX(Component.LEFT_ALIGNMENT);
-        centerPanel.add(commentsScrollPane);
-
-        panel.add(centerPanel, BorderLayout.CENTER);
-
-        // --- Button Panel (South) ---
-        JPanel buttonPanel = new JPanel(new FlowLayout());
-        buttonPanel.setBackground(Color.decode("#FCD303"));
-
-        feedbackReportButtonList.clear();
-        // Per your new convention: no underscores
-        backFeedbackReportButton.setActionCommand("GO BACK FEEDBACK REPORT");
-        feedbackReportButtonList.add(backFeedbackReportButton);
-
-        // Also add the fetch button to this list so the listener is attached
-        feedbackReportButtonList.add(fetchFeedbackButton);
-
-        buttonPanel.add(backFeedbackReportButton);
-        panel.add(buttonPanel, BorderLayout.SOUTH);
-
-        return panel;
-    }
-
-    /**
-     * Builds the truck simulation selection panel.
+     * Builds the Manage Database panel.
      * @return a JPanel for the MANAGE_DATABASE_MENU card
      */
     private JPanel createManageDatabasePanel() {
-        // MAIN PANEL
         JPanel panel = new JPanel(new BorderLayout());
 
-        // LABELS
+        // LABEL
         JPanel manageDatabaseLabelPanel = new JPanel(new GridBagLayout());
-
-        ArrayList<JLabel> labelList = new ArrayList<>(); // Used for multiple labels
-        labelList.add(new JLabel("What kind of transaction do you want to do?"));
-        labelList.getFirst().setFont(new Font("Verdana", Font.BOLD, 20));
-
-        for (JLabel jLabel : labelList) {
-            manageDatabaseLabelPanel.add(jLabel);
-        }
-
+        JLabel label = new JLabel("What kind of transaction do you want to do?");
+        label.setFont(new Font("Verdana", Font.BOLD, 20));
+        manageDatabaseLabelPanel.add(label);
         panel.add(manageDatabaseLabelPanel, BorderLayout.CENTER);
 
         // BUTTONS
@@ -289,71 +210,18 @@ public class AdminView extends JFrame {
     }
 
     /**
-     * Creates a panel to display the ranked restaurant revenue report.
-     * @return a JPanel for the REVENUE_REPORT_PANEL card
-     */
-    private JPanel createRevenueReportPanel() {
-        JPanel panel = new JPanel(new BorderLayout(10, 10));
-        panel.setBorder(new EmptyBorder(10, 10, 10, 10));
-
-        // Title
-        JPanel titlePanel = new JPanel(new GridBagLayout());
-        JLabel label = new JLabel("Restaurant Revenue & Transaction Report");
-        label.setFont(new Font("Verdana", Font.BOLD, 20));
-        titlePanel.add(label);
-        panel.add(titlePanel, BorderLayout.NORTH);
-
-        // Results Table
-        String[] columnNames = {"Restaurant Name", "Total Revenue", "Total Transactions"};
-        revenueReportTableModel = new DefaultTableModel(columnNames, 0) {
-            @Override
-            public boolean isCellEditable(int row, int column) {
-                return false; // Make table cells not editable
-            }
-        };
-        revenueReportTable = new JTable(revenueReportTableModel);
-        JScrollPane scrollPane = new JScrollPane(revenueReportTable);
-
-        panel.add(scrollPane, BorderLayout.CENTER);
-
-        // Button Panel
-        JPanel buttonPanel = new JPanel(new FlowLayout());
-        buttonPanel.setBorder(new EmptyBorder(10, 150, 10, 150));
-        buttonPanel.setBackground(Color.decode("#FCD303"));
-
-        revenueReportButtonList.clear();
-
-        backRevenueReportButton.setActionCommand("GO BACK REVENUE REPORT"); // No underscore
-        revenueReportButtonList.add(backRevenueReportButton);
-
-        for(JButton btn : revenueReportButtonList) {
-            buttonPanel.add(btn);
-        }
-
-        panel.add(buttonPanel, BorderLayout.SOUTH);
-
-        return panel;
-    }
-
-    /**
      * Shows a menu for generating reports.
      * @return a JPanel for the GENERATE_REPORTS_MENU card
      */
     private JPanel createGenerateReportsPanel() {
-        // MAIN PANEL
         JPanel panel = new JPanel(new BorderLayout());
 
-        // LABELS
         JPanel titlePanel = new JPanel(new GridBagLayout());
-
         JLabel label = new JLabel("Choose a report to generate");
         label.setFont(new Font("Verdana", Font.BOLD, 20));
-
         titlePanel.add(label);
-
         panel.add(titlePanel, BorderLayout.CENTER);
 
-        // BUTTONS
         JPanel generateReportsButtonPanel = new JPanel(new GridLayout(0, 1));
         generateReportsButtonPanel.setBorder(new EmptyBorder(10, 150, 10, 150));
         generateReportsButtonPanel.setBackground(Color.decode("#FCD303"));
@@ -377,20 +245,14 @@ public class AdminView extends JFrame {
     }
 
     private JPanel createUserRegPanel() {
-        // MAIN PANEL
         JPanel panel = new JPanel(new BorderLayout());
 
-        // LABELS
         JPanel titlePanel = new JPanel(new GridBagLayout());
-
         JLabel label = new JLabel("User Registration Report");
         label.setFont(new Font("Verdana", Font.BOLD, 20));
-
         titlePanel.add(label);
-
         panel.add(titlePanel, BorderLayout.NORTH);
 
-        // BUTTONS
         JPanel userRegButtonPanel = new JPanel(new GridLayout(0, 1));
         userRegButtonPanel.setBorder(new EmptyBorder(10, 150, 10, 150));
         userRegButtonPanel.setBackground(Color.decode("#FCD303"));
@@ -403,7 +265,6 @@ public class AdminView extends JFrame {
     }
 
     private JPanel createUserCreationPanel() {
-        // MAIN PANEL
         JPanel panel = new JPanel(new BorderLayout());
 
         // LABELS
@@ -413,9 +274,9 @@ public class AdminView extends JFrame {
         titlePanel.add(label);
         panel.add(titlePanel, BorderLayout.NORTH);
 
-        // --- REGISTRATION FORM ---
-        JPanel formPanel = new JPanel(new GridLayout(0, 2, 10, 10)); // 0 rows, 2 cols, 10px gaps
-        formPanel.setBorder(new EmptyBorder(20, 150, 20, 150)); // Add padding
+        // FORM
+        JPanel formPanel = new JPanel(new GridLayout(0, 2, 10, 10));
+        formPanel.setBorder(new EmptyBorder(20, 150, 20, 150));
 
         JLabel nameLabel = new JLabel("Username:");
         JLabel emailLabel = new JLabel("Email Address:");
@@ -434,13 +295,15 @@ public class AdminView extends JFrame {
 
         panel.add(formPanel, BorderLayout.CENTER);
 
-        // --- BUTTONS ---
+        // BUTTONS
         JPanel userRegButtonPanel = new JPanel(new FlowLayout());
         userRegButtonPanel.setBorder(new EmptyBorder(10, 150, 10, 150));
         userRegButtonPanel.setBackground(Color.decode("#FCD303"));
 
         userRegButtonList.clear();
 
+        // NOTE: original code used "REGISTER_USER"; controller uses "REGISTER USER".
+        // We keep original to avoid touching group code.
         registerButton.setActionCommand("REGISTER_USER");
         backUserRegButton.setActionCommand("GO BACK USER REG");
 
@@ -461,11 +324,9 @@ public class AdminView extends JFrame {
      * @return a JPanel for the USER_REPORT_PANEL card
      */
     private JPanel createUserReportPanel() {
-        // MAIN PANEL
         JPanel panel = new JPanel(new BorderLayout(10, 10));
         panel.setBorder(new EmptyBorder(10, 10, 10, 10));
 
-        // LABELS
         JPanel titlePanel = new JPanel(new GridBagLayout());
         JLabel label = new JLabel("Registered User List");
         label.setFont(new Font("Verdana", Font.BOLD, 20));
@@ -476,7 +337,7 @@ public class AdminView extends JFrame {
         userReportTableModel = new DefaultTableModel(columnNames, 0) {
             @Override
             public boolean isCellEditable(int row, int column) {
-                return false; // Make table cells not editable
+                return false;
             }
         };
         userReportTable = new JTable(userReportTableModel);
@@ -484,14 +345,131 @@ public class AdminView extends JFrame {
 
         panel.add(scrollPane, BorderLayout.CENTER);
 
-        // BUTTONS
-        JPanel userReportButtonPanel = new JPanel(new FlowLayout()); // Changed to FlowLayout
+        JPanel userReportButtonPanel = new JPanel(new FlowLayout());
         userReportButtonPanel.setBorder(new EmptyBorder(10, 150, 10, 150));
         userReportButtonPanel.setBackground(Color.decode("#FCD303"));
 
         userReportButtonPanel.add(backUserReportButton);
 
         panel.add(userReportButtonPanel, BorderLayout.SOUTH);
+
+        return panel;
+    }
+
+    /**
+     * Creates a panel to display the ranked restaurant revenue report.
+     * @return a JPanel for the REVENUE_REPORT_PANEL card
+     */
+    private JPanel createRevenueReportPanel() {
+        JPanel panel = new JPanel(new BorderLayout(10, 10));
+        panel.setBorder(new EmptyBorder(10, 10, 10, 10));
+
+        JPanel titlePanel = new JPanel(new GridBagLayout());
+        JLabel label = new JLabel("Restaurant Revenue & Transaction Report");
+        label.setFont(new Font("Verdana", Font.BOLD, 20));
+        titlePanel.add(label);
+        panel.add(titlePanel, BorderLayout.NORTH);
+
+        String[] columnNames = {"Restaurant Name", "Total Revenue", "Total Transactions"};
+        revenueReportTableModel = new DefaultTableModel(columnNames, 0) {
+            @Override
+            public boolean isCellEditable(int row, int column) {
+                return false;
+            }
+        };
+        revenueReportTable = new JTable(revenueReportTableModel);
+        JScrollPane scrollPane = new JScrollPane(revenueReportTable);
+
+        panel.add(scrollPane, BorderLayout.CENTER);
+
+        JPanel buttonPanel = new JPanel(new FlowLayout());
+        buttonPanel.setBorder(new EmptyBorder(10, 150, 10, 150));
+        buttonPanel.setBackground(Color.decode("#FCD303"));
+
+        revenueReportButtonList.clear();
+
+        backRevenueReportButton.setActionCommand("GO BACK REVENUE REPORT");
+        revenueReportButtonList.add(backRevenueReportButton);
+
+        for (JButton btn : revenueReportButtonList) {
+            buttonPanel.add(btn);
+        }
+
+        panel.add(buttonPanel, BorderLayout.SOUTH);
+
+        return panel;
+    }
+
+    /**
+     * Creates a panel to display detailed feedback for a selected restaurant.
+     * @return a JPanel for the FEEDBACK_REPORT_PANEL card
+     */
+    private JPanel createFeedbackReportPanel() {
+        JPanel panel = new JPanel(new BorderLayout(10, 10));
+        panel.setBorder(new EmptyBorder(10, 10, 10, 10));
+
+        // --- Top Selection Panel ---
+        JPanel topPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+        topPanel.add(new JLabel("Select Restaurant:"));
+        feedbackRestaurantComboBox = new JComboBox<>();
+        topPanel.add(feedbackRestaurantComboBox);
+
+        fetchFeedbackButton = new JButton("Fetch Report");
+        fetchFeedbackButton.setActionCommand("Fetch Feedback Report");
+        topPanel.add(fetchFeedbackButton);
+
+        panel.add(topPanel, BorderLayout.NORTH);
+
+        // --- Center Content Panel ---
+        JPanel centerPanel = new JPanel();
+        centerPanel.setLayout(new BoxLayout(centerPanel, BoxLayout.Y_AXIS));
+
+        // Overall Rating
+        JPanel ratingPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+        ratingPanel.setBorder(BorderFactory.createTitledBorder("Overall Rating"));
+        overallRatingLabel = new JLabel("N/A");
+        overallRatingLabel.setFont(new Font("Verdana", Font.BOLD, 18));
+        ratingPanel.add(overallRatingLabel);
+        ratingPanel.setAlignmentX(Component.LEFT_ALIGNMENT);
+        centerPanel.add(ratingPanel);
+
+        // Menu Popularity Table
+        String[] menuColumnNames = {"Menu Item", "Total Times Ordered"};
+        menuPopularityTableModel = new DefaultTableModel(menuColumnNames, 0) {
+            public boolean isCellEditable(int row, int column) { return false; }
+        };
+        menuPopularityTable = new JTable(menuPopularityTableModel);
+        JScrollPane menuScrollPane = new JScrollPane(menuPopularityTable);
+        menuScrollPane.setBorder(BorderFactory.createTitledBorder("Menu Item Popularity (Ranked)"));
+        menuScrollPane.setPreferredSize(new Dimension(800, 150));
+        menuScrollPane.setAlignmentX(Component.LEFT_ALIGNMENT);
+        centerPanel.add(menuScrollPane);
+
+        // Comments Table
+        String[] commentsColumnNames = {"User Comments"};
+        commentsTableModel = new DefaultTableModel(commentsColumnNames, 0) {
+            public boolean isCellEditable(int row, int column) { return false; }
+        };
+        commentsTable = new JTable(commentsTableModel);
+        JScrollPane commentsScrollPane = new JScrollPane(commentsTable);
+        commentsScrollPane.setBorder(BorderFactory.createTitledBorder("Feedback Comments"));
+        commentsScrollPane.setPreferredSize(new Dimension(800, 150));
+        commentsScrollPane.setAlignmentX(Component.LEFT_ALIGNMENT);
+        centerPanel.add(commentsScrollPane);
+
+        panel.add(centerPanel, BorderLayout.CENTER);
+
+        // --- Button Panel (South) ---
+        JPanel buttonPanel = new JPanel(new FlowLayout());
+        buttonPanel.setBackground(Color.decode("#FCD303"));
+
+        feedbackReportButtonList.clear();
+        backFeedbackReportButton.setActionCommand("GO BACK FEEDBACK REPORT");
+        feedbackReportButtonList.add(backFeedbackReportButton);
+        feedbackReportButtonList.add(fetchFeedbackButton);
+
+        buttonPanel.add(backFeedbackReportButton);
+        panel.add(buttonPanel, BorderLayout.SOUTH);
 
         return panel;
     }
@@ -517,10 +495,8 @@ public class AdminView extends JFrame {
             return;
         }
 
-        // Clear old results
         userReportTableModel.setRowCount(0);
 
-        // Add new results
         if (users != null) {
             for (UserData user : users) {
                 userReportTableModel.addRow(new Object[]{
@@ -534,40 +510,32 @@ public class AdminView extends JFrame {
 
     /*
      * --------------------------------------------------------------------------------------------
-     * FOOD EVENT PANEL (added)
+     * FOOD EVENT PANEL
      * --------------------------------------------------------------------------------------------
      */
 
-    /**
-     * Creates the panel for managing food events (add/edit/delete).
-     * @return JPanel for the FOOD_EVENT_MENU card
-     */
     private JPanel createFoodEventPanel() {
-        // MAIN PANEL
         JPanel panel = new JPanel(new BorderLayout(10, 10));
         panel.setBorder(new EmptyBorder(10, 10, 10, 10));
 
-        // TITLE
         JPanel titlePanel = new JPanel(new GridBagLayout());
         JLabel titleLabel = new JLabel("Manage Food Events");
         titleLabel.setFont(new Font("Verdana", Font.BOLD, 20));
         titlePanel.add(titleLabel);
         panel.add(titlePanel, BorderLayout.NORTH);
 
-        // --- CENTER PANEL: Split into table and form ---
         JPanel centerPanel = new JPanel(new BorderLayout(10, 10));
 
-        // LEFT: Table showing existing food events
+        // Table
         String[] columnNames = {"ID", "Event Name", "Description"};
         foodEventTableModel = new DefaultTableModel(columnNames, 0) {
             @Override
             public boolean isCellEditable(int row, int column) {
-                return false; // Make table non-editable
+                return false;
             }
         };
         foodEventTable = new JTable(foodEventTableModel);
         foodEventTable.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
-        // Add listener to populate form when row is selected
         foodEventTable.getSelectionModel().addListSelectionListener(e -> {
             if (!e.getValueIsAdjusting()) {
                 int selectedRow = foodEventTable.getSelectedRow();
@@ -581,7 +549,7 @@ public class AdminView extends JFrame {
         tableScrollPane.setBorder(BorderFactory.createTitledBorder("Existing Food Events"));
         centerPanel.add(tableScrollPane, BorderLayout.CENTER);
 
-        // RIGHT: Form for adding/editing
+        // Form
         JPanel formPanel = new JPanel(new GridBagLayout());
         formPanel.setBorder(BorderFactory.createTitledBorder("Add/Edit Food Event"));
         GridBagConstraints gbc = new GridBagConstraints();
@@ -618,12 +586,11 @@ public class AdminView extends JFrame {
         JScrollPane descScrollPane = new JScrollPane(foodEventDescriptionArea);
         formPanel.add(descScrollPane, gbc);
 
-        // Add form panel to center (right side)
         centerPanel.add(formPanel, BorderLayout.EAST);
 
         panel.add(centerPanel, BorderLayout.CENTER);
 
-        // --- BUTTONS (South) ---
+        // Buttons
         JPanel buttonPanel = new JPanel(new FlowLayout());
         buttonPanel.setBackground(Color.decode("#FCD303"));
 
@@ -645,7 +612,7 @@ public class AdminView extends JFrame {
         refreshButton.setActionCommand("REFRESH_FOOD_EVENT_TABLE");
         foodEventButtonList.add(refreshButton);
 
-        backFoodEventButton.setActionCommand("GO BACK");
+        backFoodEventButton.setActionCommand("GO BACK FOOD EVENT");
         foodEventButtonList.add(backFoodEventButton);
 
         for (JButton btn : foodEventButtonList) {
@@ -657,59 +624,38 @@ public class AdminView extends JFrame {
         return panel;
     }
 
-    // Getter methods for food event components
-    public JTable getFoodEventTable() {
-        return foodEventTable;
-    }
-
-    public DefaultTableModel getFoodEventTableModel() {
-        return foodEventTableModel;
-    }
-
-    public JTextField getFoodEventNameField() {
-        return foodEventNameField;
-    }
-
-    public JTextArea getFoodEventDescriptionArea() {
-        return foodEventDescriptionArea;
-    }
+    public JTable getFoodEventTable() { return foodEventTable; }
+    public DefaultTableModel getFoodEventTableModel() { return foodEventTableModel; }
+    public JTextField getFoodEventNameField() { return foodEventNameField; }
+    public JTextArea getFoodEventDescriptionArea() { return foodEventDescriptionArea; }
 
     /*
      * --------------------------------------------------------------------------------------------
-     * ORIGIN PANEL (added)
+     * ORIGIN PANEL
      * --------------------------------------------------------------------------------------------
      */
 
-    /**
-     * Creates the panel for managing origins (add/edit/delete).
-     * @return JPanel for the ORIGIN_MENU card
-     */
     private JPanel createOriginPanel() {
-        // MAIN PANEL
         JPanel panel = new JPanel(new BorderLayout(10, 10));
         panel.setBorder(new EmptyBorder(10, 10, 10, 10));
 
-        // TITLE
         JPanel titlePanel = new JPanel(new GridBagLayout());
         JLabel titleLabel = new JLabel("Manage Origins");
         titleLabel.setFont(new Font("Verdana", Font.BOLD, 20));
         titlePanel.add(titleLabel);
         panel.add(titlePanel, BorderLayout.NORTH);
 
-        // --- CENTER PANEL: Split into table and form ---
         JPanel centerPanel = new JPanel(new BorderLayout(10, 10));
 
-        // LEFT: Table showing existing origins
         String[] columnNames = {"ID", "Origin Name"};
         originTableModel = new DefaultTableModel(columnNames, 0) {
             @Override
             public boolean isCellEditable(int row, int column) {
-                return false; // Make table non-editable
+                return false;
             }
         };
         originTable = new JTable(originTableModel);
         originTable.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
-        // Add listener to populate form when row is selected
         originTable.getSelectionModel().addListSelectionListener(e -> {
             if (!e.getValueIsAdjusting()) {
                 int selectedRow = originTable.getSelectedRow();
@@ -722,14 +668,12 @@ public class AdminView extends JFrame {
         tableScrollPane.setBorder(BorderFactory.createTitledBorder("Existing Origins"));
         centerPanel.add(tableScrollPane, BorderLayout.CENTER);
 
-        // RIGHT: Form for adding/editing
         JPanel formPanel = new JPanel(new GridBagLayout());
         formPanel.setBorder(BorderFactory.createTitledBorder("Add/Edit Origin"));
         GridBagConstraints gbc = new GridBagConstraints();
         gbc.insets = new Insets(5, 5, 5, 5);
         gbc.fill = GridBagConstraints.HORIZONTAL;
 
-        // Origin Name
         gbc.gridx = 0;
         gbc.gridy = 0;
         gbc.anchor = GridBagConstraints.EAST;
@@ -742,12 +686,10 @@ public class AdminView extends JFrame {
         originNameField = new JTextField(20);
         formPanel.add(originNameField, gbc);
 
-        // Add form panel to center (right side)
         centerPanel.add(formPanel, BorderLayout.EAST);
 
         panel.add(centerPanel, BorderLayout.CENTER);
 
-        // --- BUTTONS (South) ---
         JPanel buttonPanel = new JPanel(new FlowLayout());
         buttonPanel.setBackground(Color.decode("#FCD303"));
 
@@ -769,7 +711,7 @@ public class AdminView extends JFrame {
         refreshButton.setActionCommand("REFRESH_ORIGIN_TABLE");
         originButtonList.add(refreshButton);
 
-        backOriginButton.setActionCommand("GO BACK");
+        backOriginButton.setActionCommand("GO BACK ORIGIN");
         originButtonList.add(backOriginButton);
 
         for (JButton btn : originButtonList) {
@@ -781,18 +723,96 @@ public class AdminView extends JFrame {
         return panel;
     }
 
-    // Getter methods for origin components
-    public JTable getOriginTable() {
-        return originTable;
+    public JTable getOriginTable() { return originTable; }
+    public DefaultTableModel getOriginTableModel() { return originTableModel; }
+    public JTextField getOriginNameField() { return originNameField; }
+
+    /*
+     * --------------------------------------------------------------------------------------------
+     * LOG NEW DISH PANEL
+     * --------------------------------------------------------------------------------------------
+     */
+
+    private void initLogNewDishPanel() {
+        logNewDishPanel = new JPanel(new BorderLayout());
+        logNewDishPanel.setBackground(Color.WHITE);
+
+        JPanel formPanel = new JPanel(new GridLayout(0, 2, 10, 10));
+        formPanel.setBorder(new EmptyBorder(20, 40, 20, 40));
+
+        // Dish name
+        formPanel.add(new JLabel("Dish name:"));
+        dishNameField = new JTextField();
+        formPanel.add(dishNameField);
+
+        // Price
+        formPanel.add(new JLabel("Price:"));
+        dishPriceField = new JTextField();
+        formPanel.add(dishPriceField);
+
+        // Origin
+        formPanel.add(new JLabel("Origin:"));
+        originComboBox = new JComboBox<>();
+        formPanel.add(originComboBox);
+
+        // Food Event
+        formPanel.add(new JLabel("Food Event:"));
+        eventComboBox = new JComboBox<>();
+        formPanel.add(eventComboBox);
+
+        // Restaurant
+        formPanel.add(new JLabel("Restaurant:"));
+        restaurantComboBox = new JComboBox<>();
+        formPanel.add(restaurantComboBox);
+
+        logNewDishPanel.add(formPanel, BorderLayout.CENTER);
+
+        JPanel buttonPanel = new JPanel(new FlowLayout(FlowLayout.CENTER, 20, 10));
+        saveNewDishButton = new JButton("Save Dish");
+        saveNewDishButton.setActionCommand("SAVE_NEW_DISH");
+
+        backFromLogDishButton = new JButton("GO BACK");
+        backFromLogDishButton.setActionCommand("GO BACK LOG NEW DISH");
+
+        buttonPanel.add(saveNewDishButton);
+        buttonPanel.add(backFromLogDishButton);
+
+        logNewDishPanel.add(buttonPanel, BorderLayout.SOUTH);
     }
 
-    public DefaultTableModel getOriginTableModel() {
-        return originTableModel;
+    // helpers + getters for Log New Dish
+    public void populateLogNewDishCombos(
+            ArrayList<String> origins,
+            ArrayList<String> events,
+            ArrayList<String> restaurants) {
+
+        if (originComboBox != null) {
+            originComboBox.removeAllItems();
+            if (origins != null) {
+                for (String o : origins) originComboBox.addItem(o);
+            }
+        }
+
+        if (eventComboBox != null) {
+            eventComboBox.removeAllItems();
+            if (events != null) {
+                for (String e : events) eventComboBox.addItem(e);
+            }
+        }
+
+        if (restaurantComboBox != null) {
+            restaurantComboBox.removeAllItems();
+            if (restaurants != null) {
+                for (String r : restaurants) restaurantComboBox.addItem(r);
+            }
+        }
     }
 
-    public JTextField getOriginNameField() {
-        return originNameField;
-    }
+    public JTextField getDishNameField() { return dishNameField; }
+    public JTextField getDishPriceField() { return dishPriceField; }
+    public JComboBox<String> getOriginComboBox() { return originComboBox; }
+    public JComboBox<String> getEventComboBox() { return eventComboBox; }
+    public JComboBox<String> getRestaurantComboBox() { return restaurantComboBox; }
 
     /*
      * --------------------------------------------------------------------------------------------
@@ -800,12 +820,8 @@ public class AdminView extends JFrame {
      * --------------------------------------------------------------------------------------------
      */
 
-    /**
-     * Refreshes the display panels of the application. This method removes existing panels,
-     * recreates them to reflect any updated data, and then adds them back to the main panel.
-     */
     public void refreshPanels() {
-        // Remove
+        // remove old panels (not main menu)
         mainPanel.remove(manageDatabasePanel);
         mainPanel.remove(generateReportsPanel);
         mainPanel.remove(userRegPanel);
@@ -813,11 +829,11 @@ public class AdminView extends JFrame {
         mainPanel.remove(userReportPanel);
         mainPanel.remove(revenueReportPanel);
         mainPanel.remove(feedbackReportPanel);
-        // NEW
         mainPanel.remove(foodEventPanel);
         mainPanel.remove(originPanel);
+        mainPanel.remove(logNewDishPanel);
 
-        // Generate and add
+        // recreate
         manageDatabasePanel = createManageDatabasePanel();
         generateReportsPanel = createGenerateReportsPanel();
         userRegPanel = createUserRegPanel();
@@ -825,10 +841,11 @@ public class AdminView extends JFrame {
         userReportPanel = createUserReportPanel();
         revenueReportPanel = createRevenueReportPanel();
         feedbackReportPanel = createFeedbackReportPanel();
-        // NEW
         foodEventPanel = createFoodEventPanel();
         originPanel = createOriginPanel();
+        initLogNewDishPanel();
 
+        // re-add
         mainPanel.add(manageDatabasePanel, "MANAGE_DATABASE_MENU");
         mainPanel.add(generateReportsPanel, "GENERATE_REPORTS_MENU");
         mainPanel.add(userRegPanel, "USER_REG");
@@ -836,43 +853,38 @@ public class AdminView extends JFrame {
         mainPanel.add(userReportPanel, "USER_REPORT_PANEL");
         mainPanel.add(revenueReportPanel, "REVENUE_REPORT_PANEL");
         mainPanel.add(feedbackReportPanel, "FEEDBACK_REPORT_PANEL");
-        // NEW
         mainPanel.add(foodEventPanel, "FOOD_EVENT_MENU");
         mainPanel.add(originPanel, "ORIGIN_MENU");
+        mainPanel.add(logNewDishPanel, "LOG_NEW_DISH_MENU");
 
-        // Revalidate and repaint
         mainPanel.revalidate();
         mainPanel.repaint();
     }
 
-    /**
-     * Sets the ActionListener for various GUI components, ensuring that button clicks
-     * and other actions are handled by the provided listener.
-     *
-     * @param listener The ActionListener to be used for the GUI components.
-     */
     public void setActionListener(ActionListener listener) {
-        // Remove to not stack
+        // remove (to avoid stacking same listener)
         backButton.removeActionListener(listener);
         backGenerateReportsButton.removeActionListener(listener);
         backUserRegButton.removeActionListener(listener);
         backUserReportButton.removeActionListener(listener);
         backRevenueReportButton.removeActionListener(listener);
         backFeedbackReportButton.removeActionListener(listener);
-        // NEW
         backFoodEventButton.removeActionListener(listener);
         backOriginButton.removeActionListener(listener);
+        if (saveNewDishButton != null) saveNewDishButton.removeActionListener(listener);
+        if (backFromLogDishButton != null) backFromLogDishButton.removeActionListener(listener);
 
-        // Add
+        // add
         backButton.addActionListener(listener);
         backGenerateReportsButton.addActionListener(listener);
         backUserRegButton.addActionListener(listener);
         backUserReportButton.addActionListener(listener);
         backRevenueReportButton.addActionListener(listener);
         backFeedbackReportButton.addActionListener(listener);
-        // NEW
         backFoodEventButton.addActionListener(listener);
         backOriginButton.addActionListener(listener);
+        if (saveNewDishButton != null) saveNewDishButton.addActionListener(listener);
+        if (backFromLogDishButton != null) backFromLogDishButton.addActionListener(listener);
 
         for (JButton jButton : mainMenuButtonList) {
             jButton.removeActionListener(listener);
@@ -890,18 +902,14 @@ public class AdminView extends JFrame {
             jButton.removeActionListener(listener);
             jButton.addActionListener(listener);
         }
-
         for (JButton jButton : revenueReportButtonList) {
             jButton.removeActionListener(listener);
             jButton.addActionListener(listener);
         }
-
         for (JButton jButton : feedbackReportButtonList) {
             jButton.removeActionListener(listener);
             jButton.addActionListener(listener);
         }
-
-        // NEW: hook up food event & origin button lists
         for (JButton jButton : foodEventButtonList) {
             jButton.removeActionListener(listener);
             jButton.addActionListener(listener);
@@ -911,27 +919,17 @@ public class AdminView extends JFrame {
             jButton.addActionListener(listener);
         }
 
-        // Add ActionCommands (actions with same names but different functions)
         backUserReportButton.setActionCommand("GO BACK USER REPORT");
         backUserRegButton.setActionCommand("GO BACK USER REG");
-        // These already set in panel creation, but safe:
         backFoodEventButton.setActionCommand("GO BACK FOOD EVENT");
         backOriginButton.setActionCommand("GO BACK ORIGIN");
     }
 
-    /**
-     * Clears and repopulates the revenue report table with fresh data.
-     * @param data An ArrayList of RestaurantRevenueData objects.
-     */
     public void updateRevenueReportTable(ArrayList<RestaurantRevenueData> data) {
         if (revenueReportTableModel == null) {
             return;
         }
-
-        // Clear old results
         revenueReportTableModel.setRowCount(0);
-
-        // Add new results
         if (data != null) {
             for (RestaurantRevenueData row : data) {
                 revenueReportTableModel.addRow(new Object[]{
@@ -943,37 +941,14 @@ public class AdminView extends JFrame {
         }
     }
 
-    /**
-     * Returns the main JPanel which acts as a container for different views
-     *
-     * @return The main JPanel of the view.
-     */
-    public JPanel getMainPanel() {
-        return mainPanel;
-    }
+    public JPanel getMainPanel() { return mainPanel; }
+    public CardLayout getCardLayout() { return cardLayout; }
 
-    /**
-     * Returns the CardLayout manager used by the main panel to switch between different views.
-     *
-     * @return The CardLayout instance.
-     */
-    public CardLayout getCardLayout() {
-        return cardLayout;
-    }
-
-    /**
-     * Gets the selected restaurant name from the feedback panel's JComboBox.
-     * @return The selected restaurant name.
-     */
     public String getFeedbackSelectedRestaurant() {
         Object item = feedbackRestaurantComboBox.getSelectedItem();
         return (item != null) ? item.toString() : "[Select One]";
     }
 
-    /**
-     * Populates the restaurant selection JComboBox on the feedback panel.
-     * @param restaurantNames An ArrayList of restaurant names.
-     */
     public void populateFeedbackRestaurantComboBox(ArrayList<String> restaurantNames) {
         if (feedbackRestaurantComboBox == null) return;
         feedbackRestaurantComboBox.removeAllItems();
@@ -983,11 +958,6 @@ public class AdminView extends JFrame {
         }
     }
 
-    /**
-     * Updates all components on the feedback panel with new data.
-     * If data is null, it clears the panel.
-     * @param data The complete RestaurantFeedbackReport DTO.
-     */
     public void updateFeedbackReportPanel(RestaurantFeedbackReport data) {
         if (data == null) {
             updateOverallRatingLabel(0.0);
@@ -1011,7 +981,7 @@ public class AdminView extends JFrame {
 
     private void updateMenuPopularityTable(ArrayList<MenuItemPopularityData> items) {
         if (menuPopularityTableModel == null) return;
-        menuPopularityTableModel.setRowCount(0); // Clear old data
+        menuPopularityTableModel.setRowCount(0);
         if (items != null) {
             for (MenuItemPopularityData item : items) {
                 menuPopularityTableModel.addRow(new Object[]{
@@ -1024,18 +994,16 @@ public class AdminView extends JFrame {
 
     private void updateCommentsTable(ArrayList<String> comments) {
         if (commentsTableModel == null) return;
-        commentsTableModel.setRowCount(0); // Clear old data
+        commentsTableModel.setRowCount(0);
         if (comments != null) {
             for (String comment : comments) {
-                commentsTableModel.addRow(new Object[]{ comment });
+                commentsTableModel.addRow(new Object[]{comment});
             }
         }
     }
 
     /*
-     * --------------------------------------------------------------------------------------------
      * Simple FoodItem class so AdminView.FoodItem compiles
-     * --------------------------------------------------------------------------------------------
      */
     public static class FoodItem {
         private String name;
@@ -1046,13 +1014,8 @@ public class AdminView extends JFrame {
             this.price = price;
         }
 
-        public String getName() {
-            return name;
-        }
-
-        public double getPrice() {
-            return price;
-        }
+        public String getName() { return name; }
+        public double getPrice() { return price; }
 
         @Override
         public String toString() {
